<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:layout_margin="0dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:id="@+id/rv_home"

            android:gravity="center">
        <ImageView
            android:layout_width="@dimen/bottom_bar_icon"
            android:layout_height="@dimen/bottom_bar_icon"
            android:layout_gravity="center"
            android:src="@drawable/home_b"
            android:id="@+id/img_home"

            />
            <bigappcompany.com.rsi.widgets.MyCustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="@dimen/text_small"
                android:id="@+id/home_tv"
                android:textColor="@color/unselected"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:id="@+id/rv_news"

            android:gravity="center">
        <ImageView
            android:layout_width="@dimen/bottom_bar_icon"
            android:layout_height="@dimen/bottom_bar_icon"
            android:layout_gravity="center"

            android:src="@drawable/newevents_b"
            android:id="@+id/img_news"
            />
            <bigappcompany.com.rsi.widgets.MyCustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:textSize="@dimen/text_small"
                android:id="@+id/news_tv"
                android:textColor="@color/unselected"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rv_fac"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="1"

            android:gravity="center">
        <ImageView
            android:layout_width="@dimen/bottom_bar_icon"
            android:layout_height="@dimen/bottom_bar_icon"

            android:layout_gravity="center"
            android:id="@+id/img_fac"
            android:src="@drawable/fecilities_b"
            />
            <bigappcompany.com.rsi.widgets.MyCustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facilities"
                android:textSize="@dimen/text_small"
                android:id="@+id/fac_tv"
                android:textColor="@color/unselected"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rv_newsletter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_newsletter"
                android:layout_width="@dimen/bottom_bar_icon"
                android:layout_height="@dimen/bottom_bar_icon"
                android:layout_gravity="center"
                android:src="@drawable/newsletter"
                />

            <bigappcompany.com.rsi.widgets.MyCustomTextView
                android:id="@+id/newsletter_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newsletter"
                android:textColor="@color/unselected"
                android:textSize="@dimen/text_small"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rv_paybill"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_paybill"
                android:layout_width="@dimen/bottom_bar_icon"
                android:layout_height="@dimen/bottom_bar_icon"
                android:layout_gravity="center"
                android:src="@drawable/paybillicon"
                />

            <bigappcompany.com.rsi.widgets.MyCustomTextView
                android:id="@+id/paybill_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paybill"
                android:textColor="@color/unselected"
                android:textSize="@dimen/text_small"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
